--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,26 +1,28 @@
-# This is a basic workflow to help you get started with Actions
+# Copied from https://github.com/julia-actions/julia-runtest
+name: Run tests
 
-name: CI
-
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the main branch
-on:
+on: 
   push:
-    branches: [ main ]
+    branches: main
   pull_request:
-    branches: [ main ]
+    branches: main
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # 
-  build_and_test:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-    
+  test:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        julia-version: ['1.0', '1', 'nightly']
+        julia-arch: [x64, x86]
+        os: [ubuntu-latest, windows-latest, macOS-latest]
+        exclude:
+          - os: windows-latest
+            julia-arch: x86
+
     steps:
-    - uses: actions/checkout@v1
-    - uses: julia-actions/setup-julia@v1
-      with:
-          version: '1.5.1'
-    - uses: julia-actions/julia-buildpkg@master
-    - run: julia --project -e "import Pkg; Pkg.test()"
+      - uses: actions/checkout@v2
+      - uses: julia-actions/setup-julia@latest
+        with:
+          version: ${{ matrix.julia-version }}
+      - uses: julia-actions/julia-buildpkg@latest
+      - uses: julia-actions/julia-runtest@latest
