--- a/.github/workflows/travis.yml
+++ b/.github/workflows/travis.yml
@@ -1,7 +1,5 @@
 language: julia
 
-on: push
-
 os:
   - linux
 
@@ -21,7 +19,7 @@ after_success:
 
 jobs:
   include:
-#    - stage: "Documentation"
+    - stage: "Documentation"
       julia: 1.5
       os: linux
       script:
@@ -29,3 +27,28 @@ jobs:
                                                Pkg.instantiate()'
         - julia --project=docs/ docs/make.jl
       after_success: skip
+      
+name: Documentation
+
+on:
+  push:
+    branches:
+      - master
+    tags: '*'
+  pull_request:
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: julia-actions/setup-julia@latest
+        with:
+          version: '1.4'
+      - name: Install dependencies
+        run: julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.instantiate()'
+      - name: Build and deploy
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # For authentication with GitHub Actions token
+          DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }} # For authentication with SSH deploy key
+        run: julia --project=docs/ docs/make.jl
