Only main and dev branches should trigger workflows

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,7 +1,10 @@
 name: Documentation
 
 on:
-  - push
+  push:
+    branches:
+      - main
+      - dev
 jobs:
   Documenter:
     name: Documentation
