--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,11 @@
-name: CI
+name: RunTests 
 on:
+  push:
+    branches:
+      - main
   pull_request:
     branches:
       - main
-      - dev
 jobs:
   test:
     name: Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }} - ${{ github.event_name }}
@@ -37,7 +39,6 @@ jobs:
             ${{ runner.os }}-
       - uses: julia-actions/julia-buildpkg@latest
       - uses: julia-actions/julia-runtest@latest
-  codecov:
-    name: Codecov
-      - uses: codecov/codecov-action@v1
+    after_success:
+      - julia -e 'using Pkg; cd(Pkg.dir("Astrodynamics")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
 
