--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -4,7 +4,9 @@ on:
   push:
     branches:
       - main
-      - dev
+    tags: '*'
+  pull_request:
+
 jobs:
   Documenter:
     name: Documentation
