--- a/Project.toml
+++ b/Project.toml
@@ -22,3 +22,20 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 UnitfulAngles = "6fb2a4bd-7999-5318-a3b2-8ad61056cd98"
 UnitfulAstro = "6112ee07-acf9-5e0f-b108-d242c714bf9f"
+
+[compat]
+LiveServer = "0.5"
+PhysicalConstants = "0.2"
+Unitful = "1.4"
+Lazy = "0.15"
+UnitfulAstro = "1.0"
+UnitfulAngles = "0.6"
+RecursiveArrayTools = "2.7"
+DifferentialEquations = "6.15"
+StaticArrays = "0.12"
+Revise = "3.1"
+Plots = "1.6"
+ComponentArrays = "0.8"
+Roots = "1.0"
+Documenter = "0.25"
+Reexport = "0.2"
