--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -4,12 +4,8 @@ on:
   push:
     branches:
       - main
-<<<<<<< Updated upstream
-    tags: 'v*'
-  pull_request:
+    tags: '*'
 
-=======
->>>>>>> Stashed changes
 jobs:
   Documenter:
     name: Documentation
