--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -1,9 +1,12 @@
-name: TagBot 
+name: TagBot
 on:
-  push:
-    branches:
-      - main
+  schedule:
+    - cron: 0 0 * * *
+  workflow_dispatch:
 jobs:
-  tagbot:
-    - name: Julia TagBot
-      uses: JuliaRegistries/TagBot@v1
+  TagBot:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: JuliaRegistries/TagBot@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
