--- a/Project.toml
+++ b/Project.toml
@@ -18,6 +18,7 @@ UnitfulAngles = "6fb2a4bd-7999-5318-a3b2-8ad61056cd98"
 UnitfulAstro = "6112ee07-acf9-5e0f-b108-d242c714bf9f"
 
 [compat]
+julia = "1"
 ComponentArrays = "0.8"
 DifferentialEquations = "6.15"
 PhysicalConstants = "0.2"
