Moving documentation into tag.yml

--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -1,12 +1,23 @@
-name: TagBot
+name: Documentation
 on:
   schedule:
     - cron: 0 0 * * *
   workflow_dispatch:
 jobs:
   TagBot:
+    name: TagBot
     runs-on: ubuntu-latest
     steps:
       - uses: JuliaRegistries/TagBot@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+  Documenter:
+    name: Documentation
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: julia-actions/julia-buildpkg@latest
+      - uses: julia-actions/julia-docdeploy@latest
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }}
