Hopefully fixes docs latest version issue
* https://github.com/JuliaDocs/Documenter.jl/issues/1277

--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -1,13 +1,12 @@
 name: TagBot
 on:
   schedule:
-    - cron: 0 0 * * *
-  workflow_dispatch:
+    - cron: 0 * * * *
 jobs:
   TagBot:
-    name: TagBot
     runs-on: ubuntu-latest
     steps:
       - uses: JuliaRegistries/TagBot@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          ssh: ${{ secrets.DOCUMENTER_KEY }}
