--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -7,5 +7,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: JuliaRegistries/TagBot@v1
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+    with:
+      token: ${{ secrets.GITHUB_TOKEN }}
+      ssh: ${{ secrets.DOCUMENTER_KEY }}
