--- a/.github/workflows/julia-windows.yml
+++ b/.github/workflows/julia-windows.yml
@@ -1,7 +1,7 @@
-name: Windows
+name: Julia-Nightly
 on:
   schedule:
-    - cron: 0 0 * * * 
+    - cron: 0 0 * * *
   workflow_dispatch:
 jobs:
   test:
@@ -13,7 +13,8 @@ jobs:
         version:
           - ['1', 'nightly']
         os:
-          - windows-latest
+          - ubuntu-latest
+          - macOS-latest
         arch:
           - x64
     steps:
