--- a/.github/workflows/julia-windows.yml
+++ b/.github/workflows/julia-windows.yml
@@ -12,9 +12,10 @@ jobs:
       fail-fast: false
       matrix:
         version:
+          - '1'
           - 'nightly'
         os:
-          - ubuntu-latest
+          - windows-latest
         arch:
           - x64
     steps:
