--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,10 +11,11 @@ jobs:
       fail-fast: false
       matrix:
         version:
-          - '1.5'
+          - '1'
         os:
           - ubuntu-latest
           - macOS-latest
+          - windows-latest
         arch:
           - x64
     steps:
