--- a/.github/workflows/julia-latest.yml
+++ b/.github/workflows/julia-latest.yml
@@ -16,6 +16,7 @@ jobs:
         os:
           - ubuntu-latest
           - macOS-latest
+          - windows-latest
         arch:
           - x64
     steps:
