Fixing typo in Ju function

--- a/Project.toml
+++ b/Project.toml
@@ -7,6 +7,7 @@ version = "0.6.5"
 ComponentArrays = "b0b7db55-cfe3-40fc-9ded-d10e2dbeff66"
 Contour = "d38c429a-6771-53c6-b99e-75d170b6e991"
 Crayons = "a8cc5b0e-0ffa-5ad4-8c14-923d3ee1735f"
+DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
@@ -25,7 +26,6 @@ ComponentArrays = "0.8"
 Contour = "0.5"
 Crayons = "4.0"
 DocStringExtensions = "0.8"
-OrdinaryDiffEq = "5.43"
 PhysicalConstants = "0.2"
 Plots = "1.6"
 Reexport = "0.2, 1.0"
