--- a/Project.toml
+++ b/Project.toml
@@ -43,8 +43,8 @@ Reexport = "0.2, 1.0"
 Roots = "1.0"
 SciMLBase = "1.10"
 StaticArrays = "0.12, 1.0"
-SymbolicUtils = "0.10, 0.11"
-Symbolics = "0.1.14"
+SymbolicUtils = "0.1"
+Symbolics = "0.1"
 Unitful = "1.4"
 UnitfulAngles = "0.6"
 UnitfulAstro = "1.0"
