--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 
 [compat]
+julia = "1"
 ModelingToolkit = "5"
 StaticArrays = "1"
 Symbolics = "0.1"
