--- a/Project.toml
+++ b/Project.toml
@@ -14,6 +14,7 @@ Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 ModelingToolkit = "5"
 StaticArrays = "1"
 Symbolics = "0.1, 1"
+RuntimeGeneratedFunctions = "0.5"
 julia = "1"
 
 [extras]
