--- a/Project.toml
+++ b/Project.toml
@@ -14,6 +14,7 @@ Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 [compat]
 ModelingToolkit = "5"
 RuntimeGeneratedFunctions = "0.5"
+DocStringExtensions = "0.8"
 StaticArrays = "1"
 Symbolics = "0.1, 1"
 julia = "1"
