Updating astrodynamics package

--- a/Project.toml
+++ b/Project.toml
@@ -5,11 +5,13 @@ version = "0.10.0"
 
 [deps]
 AstrodynamicalCalculations = "87fd4df7-6036-47dd-923b-77dca2603643"
-AstrodynamicalFrames = "3cdf07a0-aadb-43b7-b839-d4c3fa3264f4"
 AstrodynamicalModels = "4282b555-f590-4262-b575-3e516e1493a7"
-AstrodynamicalStates = "b3d87722-feb5-45df-affe-eeab3e3c6ba5"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+OrbitPlots = "26fbe8db-4131-4c7c-86e6-687f8ed43765"
+OrbitPropagation = "2adc300b-a29d-443b-8ec9-150875089307"
+OrbitalFrames = "3cdf07a0-aadb-43b7-b839-d4c3fa3264f4"
+OrbitalStates = "b3d87722-feb5-45df-affe-eeab3e3c6ba5"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
