Adding compat entries

--- a/Project.toml
+++ b/Project.toml
@@ -30,6 +30,15 @@ Plots = "1"
 Reexport = "0.2, 1.0"
 StaticArrays = "0.12, 1.0"
 Unitful = "1.4"
+DifferentialEquations = "6"
+AstroTime = "0.6, 0.7"
+UnitfulAstro = "1"
+AstrodynamicalModels = "0.3"
+LabelledArrays = "1"
+ArrayInterface = "3"
+Rotations = "1"
+CoordinateTransformations = "0.6"
+Requires = "1"
 julia = "1"
 
 [extras]
