Starting on manifolds

--- a/Project.toml
+++ b/Project.toml
@@ -19,26 +19,26 @@ Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
+Rotations = "6038ab10-8711-5258-84ad-4b1120ba62dc"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 UnitfulAstro = "6112ee07-acf9-5e0f-b108-d242c714bf9f"
 
 [compat]
+ArrayInterface = "3"
+AstroTime = "0.6, 0.7"
 Contour = "0.5"
+CoordinateTransformations = "0.6"
+DifferentialEquations = "6"
 DocStringExtensions = "0.8"
+LabelledArrays = "1"
 Plots = "1"
 Reexport = "0.2, 1.0"
+Requires = "1"
+Rotations = "1"
 StaticArrays = "0.12, 1.0"
 Unitful = "1.4"
-DifferentialEquations = "6"
-AstroTime = "0.6, 0.7"
 UnitfulAstro = "1"
-AstrodynamicalModels = "0.3"
-LabelledArrays = "1"
-ArrayInterface = "3"
-Rotations = "1"
-CoordinateTransformations = "0.6"
-Requires = "1"
 julia = "1"
 
 [extras]
