CompatHelper: add new compat entry for DataFrames at version 1, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -29,6 +29,7 @@ ArrayInterface = "3"
 AstroTime = "0.6, 0.7"
 Contour = "0.5"
 CoordinateTransformations = "0.6"
+DataFrames = "1"
 DifferentialEquations = "6"
 DocStringExtensions = "0.8"
 LabelledArrays = "1"
