--- a/Project.toml
+++ b/Project.toml
@@ -35,6 +35,7 @@ LabelledArrays = "1"
 Plots = "1"
 Reexport = "0.2, 1.0"
 Requires = "1"
+Roots = "1"
 Rotations = "1"
 StaticArrays = "0.12, 1.0"
 Unitful = "1.4"
