CompatHelper: add new compat entry for RecipesBase at version 1, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -36,6 +36,7 @@ DifferentialEquations = "6"
 DocStringExtensions = "0.8"
 LabelledArrays = "1"
 Plots = "1"
+RecipesBase = "1"
 Reexport = "0.2, 1.0"
 Requires = "1"
 Rotations = "1"
