--- a/Project.toml
+++ b/Project.toml
@@ -9,7 +9,6 @@ AstroTime = "c61b5328-d09d-5e37-a9a8-0eb41c39009c"
 AstrodynamicalModels = "4282b555-f590-4262-b575-3e516e1493a7"
 Contour = "d38c429a-6771-53c6-b99e-75d170b6e991"
 CoordinateTransformations = "150eb455-5306-5404-9cee-2592286d6298"
-DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
@@ -24,24 +23,27 @@ Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
 Rotations = "6038ab10-8711-5258-84ad-4b1120ba62dc"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+SymbolicUtils = "d1185830-fcd6-423d-90d6-eec64667417b"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 UnitfulAstro = "6112ee07-acf9-5e0f-b108-d242c714bf9f"
 
 [compat]
 ArrayInterface = "3"
 AstroTime = "0.6, 0.7"
+AstrodynamicalModels = "0.3"
 Contour = "0.5"
 CoordinateTransformations = "0.6"
 DifferentialEquations = "6"
 DocStringExtensions = "0.8"
 LabelledArrays = "1"
 Plots = "1"
+RecipesBase = "1"
 Reexport = "0.2, 1.0"
 Requires = "1"
+Roots = "1"
 Rotations = "1"
 StaticArrays = "0.12, 1.0"
 SymbolicUtils = "0.10, 0.11"
-Symbolics = "0.1, 1"
 Unitful = "1.4"
 UnitfulAstro = "1"
 julia = "1"
