CompatHelper: bump compat for SymbolicUtils to 0.15, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -43,7 +43,7 @@ Requires = "1"
 Roots = "1"
 Rotations = "1"
 StaticArrays = "0.12, 1.0"
-SymbolicUtils = "0.10, 0.11"
+SymbolicUtils = "0.10, 0.11, 0.15"
 Unitful = "1.4"
 UnitfulAstro = "1"
 julia = "1"
