--- a/Project.toml
+++ b/Project.toml
@@ -17,6 +17,7 @@ DocStringExtensions = "0.8"
 ModelingToolkit = "5, 6"
 RuntimeGeneratedFunctions = "0.5"
 StaticArrays = "1"
+Memoize = "0.4"
 Symbolics = "0.1, 1, 2, 3"
 julia = "1"
 
