--- a/Project.toml
+++ b/Project.toml
@@ -43,7 +43,7 @@ Requires = "1"
 Roots = "1"
 Rotations = "1"
 StaticArrays = "0.12, 1"
-SymbolicUtils = "0.10, 0.11, 0.15, 0.16"
+SymbolicUtils = "0.10, 0.11, 0.15, 0.16, 0.18"
 Unitful = "1.4"
 UnitfulAstro = "1"
 julia = "1"
