--- a/Project.toml
+++ b/Project.toml
@@ -18,7 +18,7 @@ Memoize = "0.4"
 ModelingToolkit = "5, 6, 7"
 RuntimeGeneratedFunctions = "0.5"
 StaticArrays = "1"
-Symbolics = "0.1, 1, 2, 3"
+Symbolics = "0.1, 1, 2, 3, 4"
 julia = "1"
 
 [extras]
