--- a/Project.toml
+++ b/Project.toml
@@ -15,7 +15,7 @@ Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 [compat]
 DocStringExtensions = "0.8"
 Memoize = "0.4"
-ModelingToolkit = "5, 6"
+ModelingToolkit = "5, 6, 7"
 RuntimeGeneratedFunctions = "0.5"
 StaticArrays = "1"
 Symbolics = "0.1, 1, 2, 3"
