--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "AstrodynamicalModels"
 uuid = "4282b555-f590-4262-b575-3e516e1493a7"
 authors = ["Joe Carpinelli <jdcarpinelli@gmail.com>"]
-version = "1.1"
+version = "1.2.0"
 
 [deps]
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
@@ -13,12 +13,12 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 
 [compat]
-DocStringExtensions = "0.8"
+DocStringExtensions = "0.8, 0.9"
 Memoize = "0.4"
 ModelingToolkit = "8"
 RuntimeGeneratedFunctions = "0.5"
 StaticArrays = "1"
-Symbolics = "4"
+Symbolics = "4, 5"
 julia = "1"
 
 [extras]
