--- a/Project.toml
+++ b/Project.toml
@@ -28,7 +28,7 @@ Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 UnitfulAstro = "6112ee07-acf9-5e0f-b108-d242c714bf9f"
 
 [compat]
-ArrayInterface = "3"
+ArrayInterface = "3, 6"
 AstroTime = "0.6, 0.7"
 AstrodynamicalModels = "1"
 Contour = "0.5"
