--- a/Project.toml
+++ b/Project.toml
@@ -40,7 +40,7 @@ Plots = "1"
 RecipesBase = "1"
 Reexport = "0.2, 1.0"
 Requires = "1"
-Roots = "1"
+Roots = "1, 2"
 Rotations = "1"
 StaticArrays = "0.12, 1"
 SymbolicUtils = "0.10, 0.11, 0.15, 0.16, 0.17, 0.18, 0.19"
