CompatHelper: bump compat for DocStringExtensions to 0.9, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -34,7 +34,7 @@ AstrodynamicalModels = "1"
 Contour = "0.5"
 CoordinateTransformations = "0.6"
 DifferentialEquations = "6"
-DocStringExtensions = "0.8"
+DocStringExtensions = "0.8, 0.9"
 LabelledArrays = "1"
 Plots = "1"
 RecipesBase = "1"
