--- a/Project.toml
+++ b/Project.toml
@@ -33,7 +33,7 @@ AstroTime = "0.6, 0.7"
 AstrodynamicalModels = "1"
 Contour = "0.5"
 CoordinateTransformations = "0.6"
-DifferentialEquations = "6"
+DifferentialEquations = "6, 7"
 DocStringExtensions = "0.8, 0.9"
 LabelledArrays = "1"
 Plots = "1"
