--- a/Project.toml
+++ b/Project.toml
@@ -31,7 +31,7 @@ UnitfulAstro = "6112ee07-acf9-5e0f-b108-d242c714bf9f"
 ArrayInterface = "3, 6"
 AstroTime = "0.6, 0.7"
 AstrodynamicalModels = "1"
-Contour = "0.5"
+Contour = "0.5, 0.6"
 CoordinateTransformations = "0.6"
 DifferentialEquations = "6"
 DocStringExtensions = "0.8, 0.9"
