--- a/Project.toml
+++ b/Project.toml
@@ -8,22 +8,6 @@ DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Memoize = "c03570c3-d221-55d1-a50c-7939bbd78826"
 ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
-RuntimeGeneratedFunctions = "7e49a35a-f44a-4d26-94aa-eba1b4ca6b47"
+ParameterizedFunctions = "65888b18-ceab-5e60-b2b9-181511a3b968"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
-
-[compat]
-DocStringExtensions = "0.8, 0.9"
-Memoize = "0.4"
-ModelingToolkit = "8"
-RuntimeGeneratedFunctions = "0.5"
-StaticArrays = "1"
-Symbolics = "4, 5"
-julia = "1"
-
-[extras]
-DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
-
-[targets]
-test = ["Test", "DifferentialEquations"]
