--- a/.github/workflows/CompatHelper.yml
+++ b/.github/workflows/CompatHelper.yml
@@ -1,21 +1,27 @@
-CompatHelper:
-  image: julia:1
-  before_script:
-    - apt-get update -qq && apt-get install -y git
-    - |
-      julia --color=yes -e "
-        import Pkg;
-        ENV[\"JULIA_PKG_SERVER\"] = \"\";
-        Pkg.Registry.add(\"General\");"
-    - |
-      julia --color=yes -e "
-        import Pkg;
-        name = \"CompatHelper\";
-        uuid = \"aa819f21-2bde-4658-8897-bab36330d9b7\";
-        version = \"3\";
-        Pkg.add(; name, uuid, version)"
-  script:
-    - |
-      julia --color=yes -e "
-        import CompatHelper;
-        CompatHelper.main()"
+name: CompatHelper
+
+on:
+  schedule:
+    - cron: '0 5 * * *'
+    - cron: '0 16 * * *'
+  issues:
+    types: [opened, reopened]
+
+jobs:
+  build:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        julia-version: [1]
+        julia-arch: [x86]
+        os: [ubuntu-latest]
+    steps:
+      - uses: julia-actions/setup-julia@latest
+        with:
+          version: ${{ matrix.julia-version }}
+      - name: Pkg.add("CompatHelper")
+        run: julia -e 'using Pkg; Pkg.add("CompatHelper")'
+      - name: CompatHelper.main()
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: julia -e 'using CompatHelper; CompatHelper.main()'
