--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "GeneralAstrodynamics"
 uuid = "8068df5b-8501-4530-bd82-d24d3c9619db"
-authors = ["Joe Carpinelli <jdcarpinelli@gmail.com>"]
-version = "0.10.5"
+authors = ["Joe Carpinelli <joseph.d.carpinelli@loopy.software>"]
+version = "0.11.0"
 
 [deps]
 ArrayInterface = "4fba245c-0d91-5ea0-9b3e-6abc04ee57a9"
@@ -16,6 +16,7 @@ DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 LabelledArrays = "2ee39098-c373-598a-b85f-a56591580800"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
+ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
@@ -26,27 +27,6 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 SymbolicUtils = "d1185830-fcd6-423d-90d6-eec64667417b"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 UnitfulAstro = "6112ee07-acf9-5e0f-b108-d242c714bf9f"
-
-[compat]
-ArrayInterface = "3, 6"
-AstroTime = "0.6, 0.7"
-AstrodynamicalModels = "1"
-Contour = "0.5"
-CoordinateTransformations = "0.6"
-DifferentialEquations = "6"
-DocStringExtensions = "0.8, 0.9"
-LabelledArrays = "1"
-Plots = "1"
-RecipesBase = "1"
-Reexport = "0.2, 1.0"
-Requires = "1"
-Roots = "1, 2"
-Rotations = "1"
-StaticArrays = "0.12, 1"
-SymbolicUtils = "0.10, 0.11, 0.15, 0.16, 0.17, 0.18, 0.19"
-Unitful = "1.4"
-UnitfulAstro = "1"
-julia = "1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
