CompatHelper: add new compat entry for Requires at version 1, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -28,6 +28,9 @@ SymbolicUtils = "d1185830-fcd6-423d-90d6-eec64667417b"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 UnitfulAstro = "6112ee07-acf9-5e0f-b108-d242c714bf9f"
 
+[compat]
+Requires = "1"
+
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
