CompatHelper: add new compat entry for DifferentialEquations at version 7, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -30,6 +30,7 @@ UnitfulAstro = "6112ee07-acf9-5e0f-b108-d242c714bf9f"
 
 [compat]
 ArrayInterface = "7"
+DifferentialEquations = "7"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
