--- a/Project.toml
+++ b/Project.toml
@@ -30,24 +30,25 @@ UnitfulAstro = "6112ee07-acf9-5e0f-b108-d242c714bf9f"
 
 [compat]
 ArrayInterface = "7"
-Requires = "1"
-Rotations = "1"
-Reexport = "1"
-Unitful = "1"
-DifferentialEquations = "1"
-CoordinateTransformations = "0.6"
-RecipesBase = "1"
-StaticArrays = "1"
 AstroTime = "0.7"
-DocStringExtensions = "0.9"
-SymbolicUtils = "1"
-Plots = "1"
-ModelingToolkit = "8"
-UnitfulAstro = "1"
-LabelledArrays = "1"
-Roots = "2"
+AstrodynamicalModels = "^1.3"
 Contour = "0.6"
-AstrodynamicalModels = "^1.2"
+CoordinateTransformations = "0.6"
+DifferentialEquations = "7"
+DocStringExtensions = "0.9"
+LabelledArrays = "1"
+ModelingToolkit = "8"
+Plots = "1"
+RecipesBase = "1"
+Reexport = "1"
+Requires = "1"
+Roots = "2"
+Rotations = "1"
+StaticArrays = "1"
+SymbolicUtils = "1"
+Unitful = "1"
+UnitfulAstro = "1"
+julia = "1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
