Moves period into named tuple for halo methods

--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -8,8 +8,7 @@ on:
 jobs:
   test:
     name:
-      Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }} - ${{
-      github.event_name }}
+      Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }} - ${{ github.event_name }}
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: true
