Moves period into named tuple for halo methods

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,6 +7,8 @@
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	"features": {
 		// A Feature to install Julia via juliaup. More info: https://github.com/JuliaLang/devcontainer-features/tree/main/src/julia.
+		"ghcr.io/devcontainers/features/git": {},
+		"ghcr.io/devcontainers/features/git-lfs": {},
 		"ghcr.io/julialang/devcontainer-features/julia:1": {},
 		"ghcr.io/devcontainers/features/python:1": {},
 		"ghcr.io/devcontainers/features/github-cli": {},
@@ -19,7 +21,7 @@
 				"github.vscode-github-actions",
 				"julialang.language-julia",
 				"ms-toolsai.jupyter",
-				"valentjn.vscode-ltex"
+				"streetsidesoftware.code-spell-checker"
 			]
 		}
 	}
