--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -20,7 +20,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  test:
+  test-subpackages:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -53,7 +53,40 @@ jobs:
       - uses: julia-actions/julia-processcoverage@v1
         with:
           directories: lib/${{ matrix.group }}/src
-      # - uses: codecov/codecov-action@v4
-      #   env:
-      #     CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-      #     slug: JuliaAstro/${{ matrix.group }}.jl
+      - uses: codecov/codecov-action@v4
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+          slug: JuliaAstro/${{ matrix.group }}.jl
+  test-superpackage:
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        version:
+          - "1"
+    steps:
+      - uses: actions/checkout@v4
+      - uses: julia-actions/setup-julia@v2
+        with:
+          version: ${{ matrix.version }}
+      - uses: actions/cache@v4
+        env:
+          cache-name: cache-artifacts
+        with:
+          path: ~/.julia/artifacts
+          key: ${{ runner.os }}-test-${{ env.cache-name }}-${{ hashFiles('**/Project.toml') }}
+          restore-keys: |
+            ${{ runner.os }}-test-${{ env.cache-name }}-
+            ${{ runner.os }}-test-
+            ${{ runner.os }}-
+      - uses: julia-actions/julia-buildpkg@v1
+      - uses: julia-actions/julia-runtest@v1
+        env:
+          GROUP: "GeneralAstrodynamics"
+      - uses: julia-actions/julia-processcoverage@v1
+        with:
+          directories: src
+      - uses: codecov/codecov-action@v4
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+          slug: JuliaAstro/GeneralAstrodynamics.jl
