--- a/.github/workflows/TagBot.yml
+++ b/.github/workflows/TagBot.yml
@@ -28,37 +28,25 @@ jobs:
     if: github.event_name == 'workflow_dispatch' || github.actor == 'JuliaTagBot'
     runs-on: ubuntu-latest
     steps:
-      - name: Tag EphemerisSourcesBase.jl
+      - name: Tag AstrodynamicalCalculations.jl
         uses: JuliaRegistries/TagBot@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           ssh: ${{ secrets.DOCUMENTER_KEY }}
-          subdir: lib/EphemerisSourcesBase
-      - name: Tag HorizonsAPI.jl
+          subdir: lib/AstrodynamicalCalculations
+      - name: Tag AstrodynamicalModels.jl
         uses: JuliaRegistries/TagBot@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           ssh: ${{ secrets.DOCUMENTER_KEY }}
-          subdir: lib/HorizonsAPI
-      - name: Tag HorizonsEphemeris.jl
+          subdir: lib/AstrodynamicalModels
+      - name: Tag AstrodynamicalSolvers.jl
         uses: JuliaRegistries/TagBot@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           ssh: ${{ secrets.DOCUMENTER_KEY }}
-          subdir: lib/HorizonsEphemeris
-      - name: Tag SPICEKernels.jl
-        uses: JuliaRegistries/TagBot@v1
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          ssh: ${{ secrets.DOCUMENTER_KEY }}
-          subdir: lib/SPICEKernels
-      - name: Tag SPICEBodies.jl
-        uses: JuliaRegistries/TagBot@v1
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          ssh: ${{ secrets.DOCUMENTER_KEY }}
-          subdir: lib/SPICEBodies
-      - name: Tag EphemerisSources.jl
+          subdir: lib/AstrodynamicalSolvers
+      - name: Tag GeneralAstrodynamics.jl
         uses: JuliaRegistries/TagBot@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
