--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -48,8 +48,8 @@ jobs:
             ${{ runner.os }}-
       - uses: julia-actions/julia-buildpkg@v1
       - uses: julia-actions/julia-runtest@v1
-        env:
-          GROUP: ${{ matrix.group }}
+        with:
+          project: lib/${{ matrix.group }}
       - uses: julia-actions/julia-processcoverage@v1
         with:
           directories: lib/${{ matrix.group }}/src
